更新js文件，可以彻底离线使用

--- a/offline/mapbox.html
+++ b/offline/mapbox.html
@@ -98,7 +98,7 @@
           "layout": {
             "icon-image": "{icon}-15",
             "text-field": "{title}",
-            "text-font": ["songjian"],
+            "text-font": ["dongti"],
             "text-offset": [0, 0.6],
             "text-anchor": "top"
           }
