--- a/debug/markers-custom.html
+++ b/debug/markers-custom.html
@@ -45,10 +45,9 @@
 
 var map = window.map = new mapboxgl.Map({
     container: 'map',
-    zoom: 12.5,
-    center: [-77.01866, 38.888],
+    zoom: 3,
     style: 'mapbox://styles/mapbox/streets-v9',
-    hash: true
+    hash: true,
 });
 
 const rots = ['horizon', 'horizon', 'horizon', 'horizon'];
