Revert debug changes

--- a/debug/index.html
+++ b/debug/index.html
@@ -23,11 +23,8 @@ var map = window.map = new mapboxgl.Map({
     zoom: 12.5,
     center: [-122.4194, 37.7749],
     style: 'mapbox://styles/mapbox/streets-v11',
-    hash: true,
-    projection: 'globe'
+    hash: true
 });
-
-// map.showCollisionBoxes = true;
 
 </script>
 </body>
