--- a/debug/debug.html
+++ b/debug/debug.html
@@ -37,11 +37,9 @@ var map = window.map = new mapboxgl.Map({
     zoom: 12.5,
     center: [-77.01866, 38.888],
     style: 'mapbox://styles/mapbox/streets-v10',
-    hash: true,
-    projection: 'globe'
+    hash: true
 });
 
-map.showCollisionBoxes = true;
 map.addControl(new mapboxgl.NavigationControl());
 map.addControl(new mapboxgl.GeolocateControl({
     positionOptions: {
