--- a/debug/terrain-debug.html
+++ b/debug/terrain-debug.html
@@ -34,16 +34,19 @@
     <label><input id='circles-checkbox' type='checkbox'> circles</label><br />
     <label><input id='hillshade-checkbox' type='checkbox'> hillshade using terrain</label><br />
     <label><input id='custom-checkbox' type='checkbox'> add a custom layer</label><br />
+    <label><input id='wind-checkbox' type='checkbox'> wind</label><br />
     <label><input id='repaint-checkbox' type='checkbox'> repaint. FPS: </label><label id='fps'>0</label><br />
 </div>
 
+<script src="webgl-wind-dist/dist/wind-gl.js"></script>
+<script src="wind-custom-layer.js"></script>
 <script src='../dist/mapbox-gl-dev.js'></script>
 <script src='access_token_generated.js'></script>
 <script>
 
 var map = window.map = new mapboxgl.Map({
     container: 'map',
-    zoom: 13.5,
+    zoom: 0.5,
     center: [-122.45814, 37.76159],
     style: 'mapbox://styles/mapbox/streets-v11',
     // style: 'mapbox://styles/claretrainor/ck2pc4ljf1jbe1codiy7oxzjg', // Style with additional traffic vector source.
@@ -257,6 +260,7 @@ map.on('style.load', function() {
     map.setFog({});
 
     map.addLayer(highlightLayer);
+    map.addLayer(windLayer);
 
     document.getElementById('road-label-checkbox').onclick();
     document.getElementById('satellite-checkbox').onclick();
@@ -265,6 +269,7 @@ map.on('style.load', function() {
     document.getElementById('buildings-checkbox').onclick();
     document.getElementById('circles-checkbox').onclick();
     document.getElementById('custom-checkbox').onclick();
+    document.getElementById('wind-checkbox').onclick();
 });
 
 document.getElementById('show-tile-boundaries-checkbox').onclick = function() {
@@ -293,7 +298,7 @@ document.getElementById('freeze-tile-coverage-checkbox').onclick = function() {
 };
 
 document.getElementById('terrain-checkbox').onclick = function() {
-    map.setTerrain(this.checked ? {"source": "mapbox-dem"} : null);
+    map.setTerrain(this.checked ? {"source": "mapbox-dem", 'exaggeration': 80} : null);
 };
 
 document.getElementById('satellite-checkbox').onclick = function() {
@@ -312,6 +317,10 @@ document.getElementById('buildings-checkbox').onclick = function() {
 
 document.getElementById('custom-checkbox').onclick = function() {
     map.setLayoutProperty('highlight', 'visibility', this.checked ? 'visible' : 'none');
+};
+
+document.getElementById('wind-checkbox').onclick = function() {
+    map.setLayoutProperty('wind', 'visibility', this.checked ? 'visible' : 'none');
 };
 
 document.getElementById('hillshade-checkbox').onclick = function() {
