--- a/debug/index.html
+++ b/debug/index.html
@@ -20,10 +20,11 @@
 
 var map = window.map = new mapboxgl.Map({
     container: 'map',
-    zoom: 12.5,
+    zoom: 5.5,
     center: [-122.4194, 37.7749],
     style: 'mapbox://styles/mapbox/streets-v11',
-    hash: true
+    hash: true,
+    projection: 'globe'
 });
 
 </script>
