Adding button to debug.html

--- a/debug/debug.html
+++ b/debug/debug.html
@@ -25,8 +25,9 @@
     <label><input id='show-tile-boundaries-checkbox' type='checkbox'> tile debug</label><br />
     <label><input id='show-symbol-collision-boxes-checkbox' type='checkbox'> collision debug</label><br />
     <label><input id='show-overdraw-checkbox' type='checkbox'> overdraw debug</label><br />
-    <label><input id='pitch-checkbox' type='checkbox' checked> pitch with rotate</label><br />
+    <label><input id='show-aabb-checkbox' type='checkbox'>tile aabb debug</label><br />
     <label><input id='globe-checkbox' type='checkbox'> globe</label><br />
+    <label><input id='pitch-checkbox' type='checkbox' checked> pitch with rotate</label><br />
 </div>
 
 <script src='../dist/mapbox-gl-dev.js'></script>
@@ -141,13 +142,17 @@ document.getElementById('show-overdraw-checkbox').onclick = function() {
     map.showOverdrawInspector = !!this.checked;
 };
 
-document.getElementById('pitch-checkbox').onclick = function() {
-    map.dragRotate._pitchWithRotate = !!this.checked;
+document.getElementById('show-aabb-checkbox').onclick = function() {
+    map.showTileAABBs = !!this.checked;
 };
 
 document.getElementById('globe-checkbox').onclick = function() {
     map.dragRotate._pitchWithRotate = !!this.checked;
     map.setProjection(this.checked ? 'globe' : null);
+};
+
+document.getElementById('pitch-checkbox').onclick = function() {
+    map.dragRotate._pitchWithRotate = !!this.checked;
 };
 
 // keyboard shortcut for comparing rendering with Mapbox GL native
