wip: update style spec

--- a/debug/line-self-intersection.html
+++ b/debug/line-self-intersection.html
@@ -59,7 +59,8 @@
             id: 'line',
             paint: {
                 'line-color': 'red',
-                'line-width': 14,
+                'line-width': 24,
+                'line-border': true,
                 'line-gradient': [
                     'interpolate',
                     ['linear'],
