--- a/debug/custom-source.html
+++ b/debug/custom-source.html
@@ -3,7 +3,7 @@
 <head>
     <title>Mapbox GL JS debug page</title>
     <meta charset='utf-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name='viewport' content='width=device-width, initial-scale=1.0, user-scalable=no'>
     <link rel='stylesheet' href='../dist/mapbox-gl.css' />
     <style>
         body { margin: 0; padding: 0; }
@@ -15,7 +15,7 @@
 <body>
 <div id='map'></div>
 <div id='controls'>
-    <input id="slider" type="range" value="0" min="0" step="1"><br />
+    <input id='slider' type='range' value='0' min='0' step='1'><br />
     <label><input id='custom-source-checkbox' type='checkbox' checked>custom source</label><br />
     <label><input id='tile-boundaries-checkbox' type='checkbox'>tile boundaries</label><br />
     <label><input id='terrain-checkbox' type='checkbox'>terrain</label><br />
@@ -23,9 +23,9 @@
 
 <script src='../dist/mapbox-gl-dev.js'></script>
 <script src='../debug/access_token_generated.js'></script>
-<script>
+<script type='module'>
 
-var map = window.map = new mapboxgl.Map({
+const map = window.map = new mapboxgl.Map({
     container: 'map',
     center: [0, 0],
     zoom: 0,
@@ -33,30 +33,42 @@ var map = window.map = new mapboxgl.Map({
     hash: true
 });
 
-const tileSize = 512;
-const colors = ['red', 'green', 'blue', 'yellow'];
-let currentColor = colors[0];
+map.addControl(new mapboxgl.NavigationControl());
 
-const canvas = document.createElement('canvas');
-canvas.width = canvas.height = tileSize;
-const context = canvas.getContext('2d', {willReadFrequently: true});
+const tileSize = 512;
+const colors = ['red', 'green', 'blue'];
+let currentColor = colors[0];
 
 class CustomSource {
     constructor() {
         this.id = 'custom-source';
         this.type = 'custom';
+        this.cache = new Map();
         this.tileSize = tileSize;
     }
 
     async loadTile({z, x, y}) {
+        const key = `${z}/${x}/${y}/${currentColor}`;
+        const tile = this.cache.get(key);
+        if (tile) return tile;
+
+        const canvas = document.createElement('canvas');
+        canvas.width = canvas.height = tileSize;
+        const context = canvas.getContext('2d', {willReadFrequently: true});
+
         context.fillStyle = currentColor;
         context.fillRect(0, 0, tileSize, tileSize);
+        context.font = '24px sans-serif';
+        context.fillStyle = 'white';
+        context.fillText(`${z}/${x}/${y}`, tileSize / 2, tileSize / 2);
+
+        this.cache.set(key, canvas);
         return canvas;
     }
 }
 
 map.on('load', () => {
-    const customSource = new CustomSource();
+    const customSource = window.customSource = new CustomSource();
 
     function triggerRepaint() {
         customSource.clearTiles();
@@ -71,7 +83,6 @@ map.on('load', () => {
         source: 'custom-source',
         paint: {
             'raster-opacity': 0.25,
-            'raster-fade-duration': 0
         }
     });
 
