--- a/debug/globe-bounds.html
+++ b/debug/globe-bounds.html
@@ -46,6 +46,10 @@ var boundsData = {
     'type': 'LineString',
     coordinates: []
 };
+var globeBoundsData = {
+    'type': 'LineString',
+    coordinates: []
+};
 
 map2.on('load', () => {
     map2.addSource('bounds', {
@@ -62,16 +66,30 @@ map2.on('load', () => {
         }
     });
 
-    map2.addSource('abounds', {
+    map2.addSource('red-bounds', {
         'type': 'geojson',
         'data': boundsData
     });
     map2.addLayer({
-        'id': 'abounds',
+        'id': 'red-bounds',
         'type': 'line',
-        'source': 'abounds',
+        'source': 'red-bounds',
         'paint': {
             'line-color': 'red',
+            'line-width': 5
+        }
+    });
+
+    map2.addSource('green-bounds', {
+        'type': 'geojson',
+        'data': globeBoundsData
+    });
+    map2.addLayer({
+        'id': 'green-bounds',
+        'type': 'line',
+        'source': 'green-bounds',
+        'paint': {
+            'line-color': 'green',
             'line-width': 5
         }
     });
@@ -96,6 +114,7 @@ function updateBounds() {
     lineData.coordinates = points.map(p => map.unproject(p).toArray());
 
     const bounds = map.getBounds();
+    const globeBounds = map.transform._getGlobeBounds();
 
     boundsData.coordinates = [
         bounds.getSouthWest().toArray(),
@@ -105,8 +124,17 @@ function updateBounds() {
         bounds.getSouthWest().toArray(),
     ];
 
+    globeBoundsData.coordinates = [
+        globeBounds.getSouthWest().toArray(),
+        globeBounds.getSouthEast().toArray(),
+        globeBounds.getNorthEast().toArray(),
+        globeBounds.getNorthWest().toArray(),
+        globeBounds.getSouthWest().toArray(),
+    ];
+
     map2.getSource('bounds').setData(lineData);
-    map2.getSource('abounds').setData(boundsData);
+    map2.getSource('red-bounds').setData(boundsData);
+    map2.getSource('green-bounds').setData(globeBoundsData);
 }
 
 const marker = new mapboxgl.Marker();
