--- a/debug/index.html
+++ b/debug/index.html
@@ -15,6 +15,7 @@
 <div id='map'></div>
 
 <script src='../dist/mapbox-gl-dev.js'></script>
+<!-- <script src='../dist/mapbox-gl.js'></script> -->
 <script src='../debug/access_token_generated.js'></script>
 <script>
 
