--- a/debug/raster-color.html
+++ b/debug/raster-color.html
@@ -42,6 +42,8 @@
 <script src="../debug/access_token_generated.js"></script>
 <script>
 
+/*global d3*/
+
 const presets = {
     Satellite: {
         tileset: "mapbox.satellite",
@@ -94,7 +96,7 @@ const guiParams = new GUIParams();
 
 const mixes = {
     luminosity: [ 0.2126, 0.7152, 0.0722, 0 ],
-    average: [1/3, 1/3, 1/3, 0],
+    average: [1 / 3, 1 / 3, 1 / 3, 0],
     red: [1, 0, 0, 0],
     green: [0, 1, 0, 0],
     blue: [0, 0, 1, 0],
@@ -110,7 +112,7 @@ const mixes = {
         256 * 8.348993603394451e-07,
         -9
     ],
-}
+};
 
 const ranges = {
     "[0, 1]": [0, 1],
@@ -127,7 +129,7 @@ const tilesets = {
     "rreusser.b3c8wj9i (GFS refc)": "rreusser.b3c8wj9i",
 };
 
-const quantize = (interpolator, opac = x => 1, n=100) => d3.quantize(interpolator, n).map((c, i) => {
+const quantize = (interpolator, opac = x => 1, n = 100) => d3.quantize(interpolator, n).map((c, i) => {
     const col = d3.rgb(c);
     const t = i / (n - 1);
     return [ t, `rgba(${col.r},${col.g},${col.b},${col.opacity * opac(t)})` ];
@@ -232,7 +234,7 @@ var map = window.map = new mapboxgl.Map({
     container: "map",
     style: {version: 8, layers: [], sources: {}},
     hash: true,
-    transformRequest: function (url, type) {
+    transformRequest (url, type) {
         if (type !== "Tile") return;
         const preset = presets[guiParams.preset];
         if (preset.forbid2x) url = url.replace('@2x', '');
@@ -259,10 +261,10 @@ map.once("load", function () {
             ["linear"],
             ["raster-value"],
             ...cs.map(([pos, col]) => [
-               range[0] + (range[1] - range[0]) * pos,
-               col
+                range[0] + (range[1] - range[0]) * pos,
+                col
             ]).flat(),
-        ])
+        ]);
         document.getElementById("gradient").style.background = `linear-gradient(90deg, ${cs.map(([pos, col]) => `${col} ${(pos * 100).toFixed(1)}%`).join(",")})`;
         document.getElementById("gradient").style.opacity = guiParams.opacity;
     }
@@ -296,7 +298,7 @@ map.once("load", function () {
     preset.onChange(setPreset);
 
     opacity.onChange(opac => {
-        map.setPaintProperty("raster", "raster-opacity", opac)
+        map.setPaintProperty("raster", "raster-opacity", opac);
         document.getElementById("gradient").style.opacity = opac;
     });
 
