--- a/debug/terrain-debug.html
+++ b/debug/terrain-debug.html
@@ -125,7 +125,8 @@ map.on('style.load', function() {
             'paint': {
                 'fill-extrusion-color': 'white',
                 'fill-extrusion-height': ["get", "height"],
-                'fill-extrusion-base': ["get", "min_height"]
+                'fill-extrusion-base': ["get", "min_height"],
+                'fill-extrusion-opacity': 0.99
             }
         }, 'waterway-label');
     }
