Counteract aspect ratio

--- a/debug/terrain-debug.html
+++ b/debug/terrain-debug.html
@@ -123,7 +123,7 @@ map.on('style.load', function() {
             'type': 'fill-extrusion',
             'minzoom': 14,
             'paint': {
-                'fill-extrusion-color': 'white',
+                'fill-extrusion-color': 'black',
                 'fill-extrusion-height': ["get", "height"],
                 'fill-extrusion-base': ["get", "min_height"],
                 'fill-extrusion-opacity': 0.99
