Pass projection and resolve mercatorMatrix during transition
In globe projection, mercator matrix z scale was incorrect, disabling possibility for transition. Transform.mercatorMatrix changed in order to produce the expected mercator matrix, even in globe (zoom 5->6) transition, and then the same compensated in globe to mercator matrix.

updated satellites_custom_layer.js to show transition and satellites in mercator projection.

--- a/debug/custom-layer-globe.html
+++ b/debug/custom-layer-globe.html
@@ -45,8 +45,8 @@ const map = new mapboxgl.Map({
 });
 
 map.on('style.load', () => {
-    map.addLayer(satellitesLayer);
-    map.addLayer(coloredEarthLayer);
+    map.addLayer(satellitesLayer); // eslint-disable-line no-undef
+    map.addLayer(coloredEarthLayer); // eslint-disable-line no-undef
 
     document.getElementById('immediate-checkbox').onclick();
     document.getElementById('draped-checkbox').onclick();
