--- a/debug/terrain-debug.html
+++ b/debug/terrain-debug.html
@@ -258,7 +258,15 @@ map.on('style.load', function() {
         }
     };
 
-    map.setFog({});
+    map.setFog({
+        "color": [
+            "rgba",
+            ["*", 9.0, ["zoom"]],
+            0,
+            0,
+            1.0
+        ]
+    });
 
     map.addLayer(highlightLayer);
 
