Add HSLA expression (#448)
* Revert change in terrain-debug.html for atmosphere configuration

* Add HSLA expression

* Add expression test cases

--- a/debug/terrain-debug.html
+++ b/debug/terrain-debug.html
@@ -258,15 +258,7 @@ map.on('style.load', function() {
         }
     };
 
-    map.setFog({
-        "color": [
-            "rgba",
-            ["*", 9.0, ["zoom"]],
-            0,
-            0,
-            1.0
-        ]
-    });
+    map.setFog({});
 
     map.addLayer(highlightLayer);
 
